# ghostprobe

./: CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ghostprobe/: __init__.py  analyzer.py  cli.py  client.py  findings.py  report.py
tests/: test_allowlist.py  test_analyzer.py  test_mcp_06_10.py  test_output_and_diff.py  test_report_cli.py
tests/fixtures/: poisoned_server.json
